# spite

./: .gitignore  CMakeLists.txt  MainDriver.cpp  Makefile  README.md  SyntheticTask.cpp  SyntheticTask.hpp  TaskGranularityProxy.hpp
MPI_Reference/: CMakeLists.txt  MainDriver.cpp  TaskGranularityProxy.hpp
SPTE_lib/: CMakeLists.txt  OutputResults.cpp  OutputResults.hpp  ProcessArgs.cpp  ProcessArgs.hpp  TaskGranularityProxy.hpp
